# digger

./: .gitignore  Dockerfile  MANIFEST.in  NEWS.rst  README.md  license.txt  run_docker_tests  setup.cfg
.github/workflows/: docker-image.yml  docker-release.yml
data/: download_imgt_refs.bat
data/rhesus_motifs/IGH/: 3'D-HEPTAMER_prob.csv  V-NONAMER_prob.csv
docs/: blastresults_to_csv.rst  calc_motifs.rst  compare_annotations.rst  conf.py  docker.rst  find_alignments.rst  index.html  index.rst  install.rst  overview.rst  parse_imgt_annotations.rst  pipeline.pptx  usage.rst
docs/_build/doctrees/: blastresults_to_csv.doctree  calc_motifs.doctree  compare_annotations.doctree  digger.doctree  docker.doctree  environment.pickle  find_alignments.doctree  (+8 more)
docs/examples/: rhesus_igh.rst  targeted_annotation.rst
docs/tools/: annotation.rst  annotation_cols.tsv  annotation_ref_cols.tsv  blastresults_to_csv.rst  calc_motifs.rst  compare_annotations.rst  digger.rst  find_alignments.rst  motif_params.tsv  parse_imgt_annotations.rst  tool_summary.tsv
src/digger/: blastresults_to_csv.py  calc_motifs.py  cirelli_contig_matches.py  cirelli_to_fasta.py  compare_annotations.py  dig_sequence.py  dig_utils.py  digger.py  find_alignments.py  merge_search_d.py  motif.py  parse_genes.py  parse_imgt_annotations.py  search_motifs.py  setup_motif_params.py  slugify.py
src/receptor_digger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: notes on changes in v0.7.0.txt  run_all_tests.bat  run_all_tests.sh  summary notes.txt  summary statistics.xlsx
(+543 files in other folders)
