[metadata]
name = receptor_digger
version = 0.8.0
author = William Lees
author_email = william@lees.org.uk
description = Tools for de novo discovery of genomic germline IG and TR receptor sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/williamdlees/digger
project_urls =
    Bug Tracker = https://github.com/williamdlees/digger/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires =
    biopython>=1.81
    receptor_utils>=0.0.46
    matplotlib-venn

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    blastresults_to_csv = digger.blastresults_to_csv:main
    compare_annotations = digger.compare_annotations:main
    digger = digger.digger:main
    find_alignments = digger.find_alignments:main
    parse_imgt_annotations = digger.parse_imgt_annotations:main
    calc_motifs = digger.calc_motifs:main
    dig_sequence = digger.dig_sequence:main
